Add portfolio card overlay

--- a/portfolio.html
+++ b/portfolio.html
@@ -69,7 +69,7 @@
 
     <main>
       <!--Portfolio Cards-->
-      <section class="portfolio">
+      <section class="portfolio-section">
         <div class="container">
           <h1 class="visually-hidden">Portfolio Card</h1>
           <!--Filters-->
@@ -95,12 +95,19 @@
           <ul class="portfolio-card-items">
             <li class="portfolio-card-item">
               <a href="#" class="link portfolio-card-link">
-                <img
-                  src="./images/projects/card-img1.jpg"
-                  alt="Banking App Interface Concept"
-                  width="360"
-                  height="300"
-                />
+                <div class="portfolio-card-image-wrapper">
+                  <img
+                    src="./images/projects/card-img1.jpg"
+                    alt="Banking App Interface Concept"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="portfolio-card-overlay portfolio-overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="card-wrapper portfolio-card-border">
                   <h2 class="card-title portfolio-title-link">
                     Banking App Interface Concept
@@ -112,12 +119,19 @@
 
             <li class="portfolio-card-item">
               <a href="#" class="link portfolio-card-link">
-                <img
-                  src="./images/projects/card-img2.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                  height="300"
-                />
+                <div class="portfolio-card-image-wrapper">
+                  <img
+                    src="./images/projects/card-img2.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="portfolio-card-overlay portfolio-overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="card-wrapper portfolio-card-border">
                   <h2 class="card-title portfolio-title-link">
                     Cashless Payment
@@ -129,12 +143,19 @@
 
             <li class="link portfolio-card-item">
               <a href="#" class="link portfolio-card-link">
-                <img
-                  src="./images/projects/card-img3.jpg"
-                  alt="Meditation App"
-                  width="360"
-                  height="300"
-                />
+                <div class="portfolio-card-image-wrapper">
+                  <img
+                    src="./images/projects/card-img3.jpg"
+                    alt="Meditation App"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="portfolio-card-overlay portfolio-overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="card-wrapper portfolio-card-border">
                   <h2 class="card-title portfolio-title-link">
                     Meditation App
@@ -146,12 +167,19 @@
 
             <li class="portfolio-card-item">
               <a href="#" class="link portfolio-card-link">
-                <img
-                  src="./images/projects/card-img4.jpg"
-                  alt="Taxi Service"
-                  width="360"
-                  height="300"
-                />
+                <div class="portfolio-card-image-wrapper">
+                  <img
+                    src="./images/projects/card-img4.jpg"
+                    alt="Taxi Service"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="portfolio-card-overlay portfolio-overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="card-wrapper portfolio-card-border">
                   <h2 class="card-title portfolio-title-link">Taxi Service</h2>
                   <p class="card-descript">Marketing</p>
@@ -161,12 +189,19 @@
 
             <li class="portfolio-card-item">
               <a href="#" class="link portfolio-card-link">
-                <img
-                  src="./images/projects/card-img5.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                  height="300"
-                />
+                <div class="portfolio-card-image-wrapper">
+                  <img
+                    src="./images/projects/card-img5.jpg"
+                    alt="Screen Illustrations"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="portfolio-card-overlay portfolio-overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="card-wrapper portfolio-card-border">
                   <h2 class="card-title portfolio-title-link">
                     Screen Illustrations
@@ -178,12 +213,19 @@
 
             <li class="portfolio-card-item">
               <a href="#" class="link portfolio-card-link">
-                <img
-                  src="./images/projects/card-img6.jpg"
-                  alt="Online Courses"
-                  width="360"
-                  height="300"
-                />
+                <div class="portfolio-card-image-wrapper">
+                  <img
+                    src="./images/projects/card-img6.jpg"
+                    alt="Online Courses"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="portfolio-card-overlay portfolio-overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="card-wrapper portfolio-card-border">
                   <h2 class="card-title portfolio-title-link">
                     Online Courses
@@ -195,12 +237,19 @@
 
             <li class="portfolio-card-item">
               <a href="#" class="link portfolio-card-link">
-                <img
-                  src="./images/projects/card-img7.jpg"
-                  alt="Instagram Stories Concept"
-                  width="360"
-                  height="300"
-                />
+                <div class="portfolio-card-image-wrapper">
+                  <img
+                    src="./images/projects/card-img7.jpg"
+                    alt="Instagram Stories Concept"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="portfolio-card-overlay portfolio-overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="card-wrapper portfolio-card-border">
                   <h2 class="card-title portfolio-title-link">
                     Instagram Stories Concept
@@ -212,12 +261,19 @@
 
             <li class="portfolio-card-item">
               <a href="#" class="link portfolio-card-link">
-                <img
-                  src="./images/projects/card-img8.jpg"
-                  alt="Organic Food"
-                  width="360"
-                  height="300"
-                />
+                <div class="portfolio-card-image-wrapper">
+                  <img
+                    src="./images/projects/card-img8.jpg"
+                    alt="Organic Food"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="portfolio-card-overlay portfolio-overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="card-wrapper portfolio-card-border">
                   <h2 class="card-title portfolio-title-link">Organic Food</h2>
                   <p class="card-descript">Web Site</p>
@@ -227,12 +283,19 @@
 
             <li class="portfolio-card-item">
               <a href="#" class="link portfolio-card-link">
-                <img
-                  src="./images/projects/card-img9.jpg"
-                  alt="Fresh Coffee"
-                  width="360"
-                  height="300"
-                />
+                <div class="portfolio-card-image-wrapper">
+                  <img
+                    src="./images/projects/card-img9.jpg"
+                    alt="Fresh Coffee"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="portfolio-card-overlay portfolio-overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="card-wrapper portfolio-card-border">
                   <h2 class="card-title portfolio-title-link">Fresh Coffee</h2>
                   <p class="card-descript">Web Site</p>
