--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Studio</title>
+    <title>Web Studio</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -74,7 +74,7 @@
             <h1 class="page-header-title">
               Effective Solutions for Your Business
             </h1>
-            <button type="button" class="btn page-header-btn">
+            <button type="button" class="btn page-header-btn" data-modal-open>
               Order Service
             </button>
           </div>
@@ -477,6 +477,10 @@
         </div>
       </div>
     </footer>
+
+    <div class="modal is-hidden" data-modal>
+
+    </div>
 
     <script src="./js/modal.js"></script>
   </body>
