--- a/index.html
+++ b/index.html
@@ -478,8 +478,14 @@
       </div>
     </footer>
 
-    <div class="modal is-hidden" data-modal>
-
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button class="close-modal-btn" data-modal-close>
+          <svg class="close-modal-btn-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close-modal"></use>
+          </svg>
+        </button>
+      </div>
     </div>
 
     <script src="./js/modal.js"></script>
