--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
 
       <section class="customers section">
         <div class="container">
-          <h2 class="part-title">Castomers</h2>
+          <h2 class="part-title">Customers</h2>
           <ul class="list customer-items">
             <li class="customer-item">
               <a href="#" class="customer-link">
